# ai_book_transfer

./: .env_example  .gitignore  .pdm-python  GetChatModel.py  b.epub  env_value.py  epub_tetsing.py  main.py  main_format_transfer.py  new.txt  pyproject.toml  readme.md  robot.py
